tests/paczka1/small_fuzzy/80542572.err
Error in line 5: rUlQ A706 37,4
Error in line 2: S581 S129 6,4
Error in line 16: S581 S581 67,12
